# libpam-sqlite

./: .gitignore  Makefile.in  NEWS  README  config.h.in  configure  configure.in  cvsclean  install-module  pam_get_pass.c  pam_get_service.c  pam_mod_misc.h  pam_sqlite.c  pam_std_option.c  test.c
conf/: pam_sqlite.conf.example
debian/: README  README.Debian  changelog  control  copyright  dirs  rules
